Fix overflow issue for pre tags

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,6 +26,8 @@ a {
 
 pre {
   margin: 1rem 0;
+  overflow: auto;
+  max-width: 100%;
 }
 
 ol, ul {
